Security Issue fix